Setup social auth via vk.com

--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
 DEBUG=on
-SECRET_KEY=#%j_-6(x#y8ck!lf#pl0z*px%(cgv7_h0liam_8rpm01s##x1f
+SECRET_KEY=your-secret-key
 DATABASE_URL=psql://party_hard:party_hard@127.0.0.1:5432/party_hard
+SOCIAL_AUTH_VK_OAUTH2_KEY=your-vkoauth2-key
+SOCIAL_AUTH_VK_OAUTH2_SECRET=your-vkoauth2-secret
