Adding env vars: ORG_EMAIL, ORG_UID

--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,5 @@ SECRET_KEY=your-secret-key
 DATABASE_URL=psql://party_hard:party_hard@127.0.0.1:5432/party_hard
 SOCIAL_AUTH_VK_OAUTH2_KEY=your-vkoauth2-key
 SOCIAL_AUTH_VK_OAUTH2_SECRET=your-vkoauth2-secret
+ORG_EMAIL=org-admin-email-address
+ORG_UID=vk-org-user-id
