--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,4 @@ SOCIAL_AUTH_VK_OAUTH2_KEY=your-vkoauth2-key
 SOCIAL_AUTH_VK_OAUTH2_SECRET=your-vkoauth2-secret
 ORG_EMAIL=org-admin-email-address
 ORG_UID=vk-org-user-id
+CELERY_BROKER_URL=amqp://localhost
