Send email notification in background

--- a/.env.dist
+++ b/.env.dist
@@ -6,3 +6,9 @@ SOCIAL_AUTH_VK_OAUTH2_SECRET=your-vkoauth2-secret
 ORG_EMAIL=org-admin-email-address
 ORG_UID=vk-org-user-id
 CELERY_BROKER_URL=amqp://localhost
+EMAIL_USE_TLS=on
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=email@example.com
+EMAIL_HOST_PASSWORD=secret
+EMAIL_PORT=587
+DEFAULT_FROM_EMAIL=email@example.com
